--- a/FirstHTML.html
+++ b/FirstHTML.html
@@ -1,6 +1,13 @@
-<body style="background-color:powderblue;">
-
-<h1>This is a heading</h1>
+<html>
+<head>
+<title>
+A Simple HTML Document
+</title>
+</head>
+<body>
+<p>This is a very simple HTML document</p>
+<p>It only has two paragraphs</p>
 <p>This is a paragraph.</p>
-
+<h1>This is a heading</h1>
 </body>
+</html>
